ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Acronym__c.field-meta.xml
<CustomField>
    <fullName>Acronym__c</fullName>
    <label>Acronym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>