ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Air_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Air_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Air_Sensitive</label>
    <type>Checkbox</type>
</CustomField>