ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Aldrich_No__c.field-meta.xml
<CustomField>
    <fullName>Aldrich_No__c</fullName>
    <label>Aldrich#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>