ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Aldrich_Synonym__c.field-meta.xml
<CustomField>
    <fullName>Aldrich_Synonym__c</fullName>
    <label>Aldrich Synonym</label>
    <length>255</length>
    <type>Text</type>
</CustomField>