ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Alfa_No__c.field-meta.xml
<CustomField>
    <fullName>Alfa_No__c</fullName>
    <label>Alfa#</label>
    <length>255</length>
    <type>Text</type>
</CustomField>