ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Alternative_for_air_shipment_see__c.field-meta.xml
<CustomField>
    <fullName>Alternative_for_air_shipment_see__c</fullName>
    <label>Alternative for air shipment see</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>