ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Ampouled__c.field-meta.xml
<CustomField>
    <fullName>Ampouled__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ampouled</label>
    <type>Checkbox</type>
</CustomField>