ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/B2B_Is_Simple_Product__c.field-meta.xml
<CustomField>
    <fullName>B2B_Is_Simple_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If true, certain features will be disabled on PDP</inlineHelpText>
    <label>B2B Is Simple Product</label>
    <type>Checkbox</type>
</CustomField>