ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Blue_Section__c.field-meta.xml
<CustomField>
    <fullName>Blue_Section__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Blue Section</label>
    <type>Checkbox</type>
</CustomField>