ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/BOAT__c.field-meta.xml
<CustomField>
    <fullName>BOAT__c</fullName>
    <defaultValue>false</defaultValue>
    <label>BOAT</label>
    <type>Checkbox</type>
</CustomField>