ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/BOAT_Text__c.field-meta.xml
<CustomField>
    <fullName>BOAT_Text__c</fullName>
    <label>BOAT Text</label>
    <length>255</length>
    <type>Text</type>
</CustomField>