ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Boiling_point__c.field-meta.xml
<CustomField>
    <fullName>Boiling_point__c</fullName>
    <label>Boiling_point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>