ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Buchwald_Kit_Sheet__c.field-meta.xml
<CustomField>
    <fullName>Buchwald_Kit_Sheet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buchwald Kit Sheet</label>
    <type>Checkbox</type>
</CustomField>