ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Buchwald_Ligands_and_Precatalysts__c.field-meta.xml
<CustomField>
    <fullName>Buchwald_Ligands_and_Precatalysts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Buchwald Ligands and Precatalysts</label>
    <type>Checkbox</type>
</CustomField>