ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/C_Nanotubes__c.field-meta.xml
<CustomField>
    <fullName>C_Nanotubes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>C-Nanotubes</label>
    <type>Checkbox</type>
</CustomField>