ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/CAS2__c.field-meta.xml
<CustomField>
    <fullName>CAS2__c</fullName>
    <label>CAS2</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>