ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/CAS3__c.field-meta.xml
<CustomField>
    <fullName>CAS3__c</fullName>
    <label>CAS3</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>