ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/CAS__c.field-meta.xml
<CustomField>
    <fullName>CAS__c</fullName>
    <label>CAS</label>
    <length>255</length>
    <type>Text</type>
</CustomField>