ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Catalog__c.field-meta.xml
<CustomField>
    <fullName>Catalog__c</fullName>
    <label>Catalog</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ascensus</fullName>
            </value>
            <value>
                <fullName>Strem</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>