ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Color_and_form__c.field-meta.xml
<CustomField>
    <fullName>Color_and_form__c</fullName>
    <label>Color_and_form</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>