ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Density__c.field-meta.xml
<CustomField>
    <fullName>Density__c</fullName>
    <label>Density</label>
    <length>255</length>
    <type>Text</type>
</CustomField>