ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Density_Site__c.field-meta.xml
<CustomField>
    <fullName>Density_Site__c</fullName>
    <description>To display Density on Site</description>
    <label>Density Site</label>
    <length>255</length>
    <type>Text</type>
</CustomField>