ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Description_Search_Formula__c.field-meta.xml
<CustomField>
    <fullName>Description_Search_Formula__c</fullName>
    <formula>SUBSTITUTE( SUBSTITUTE(Description, &quot;(&quot;, &quot;&quot;), &quot;)&quot;, &quot;&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Description Search Formula</label>
    <type>Text</type>
</CustomField>