ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Description_Search_Text_2__c.field-meta.xml
<CustomField>
    <fullName>Description_Search_Text_2__c</fullName>
    <description>Description with dashes substituted</description>
    <label>Description Search Text 2</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>