ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Description_Search_Text__c.field-meta.xml
<CustomField>
    <fullName>Description_Search_Text__c</fullName>
    <description>Used as a commerce searchable field to pull out certain symbols</description>
    <label>Description Search Text</label>
    <length>4000</length>
    <type>LongTextArea</type>
</CustomField>