ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Disc_Date__c.field-meta.xml
<CustomField>
    <fullName>Disc_Date__c</fullName>
    <label>Disc Date</label>
    <type>Date</type>
</CustomField>