ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Donor_Atom__c.field-meta.xml
<CustomField>
    <fullName>Donor_Atom__c</fullName>
    <label>Donor Atom</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Oxygen</fullName>
            </value>
            <value>
                <fullName>Phosphorus</fullName>
            </value>
            <value>
                <fullName>Carbon</fullName>
            </value>
            <value>
                <fullName>Nitrogen</fullName>
            </value>
            <value>
                <fullName>Arsenic</fullName>
            </value>
            <value>
                <fullName>Sulfur</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>