ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/DUPHOS_Family__c.field-meta.xml
<CustomField>
    <fullName>DUPHOS_Family__c</fullName>
    <defaultValue>false</defaultValue>
    <label>DUPHOS Family</label>
    <type>Checkbox</type>
</CustomField>