ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/ECCN_No__c.field-meta.xml
<CustomField>
    <fullName>ECCN_No__c</fullName>
    <label>ECCN No</label>
    <length>255</length>
    <type>Text</type>
</CustomField>