ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Elements__c.field-meta.xml
<CustomField>
    <fullName>Elements__c</fullName>
    <label>Elements</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Actinium (Ac)</fullName>
            </value>
            <value>
                <fullName>Aluminum</fullName>
            </value>
            <value>
                <fullName>Aluminum (Al)</fullName>
            </value>
            <value>
                <fullName>Americium (Am)</fullName>
            </value>
            <value>
                <fullName>Ammonium</fullName>
            </value>
            <value>
                <fullName>Antimony</fullName>
            </value>
            <value>
                <fullName>Antimony (Sb)</fullName>
            </value>
            <value>
                <fullName>Argon (Ar)</fullName>
            </value>
            <value>
                <fullName>Arsenic</fullName>
            </value>
            <value>
                <fullName>Arsenic (As)</fullName>
            </value>
            <value>
                <fullName>Astatine (At)</fullName>
            </value>
            <value>
                <fullName>Barium</fullName>
            </value>
            <value>
                <fullName>Barium (Ba)</fullName>
            </value>
            <value>
                <fullName>Berkelium (Bk)</fullName>
            </value>
            <value>
                <fullName>Beryllium</fullName>
            </value>
            <value>
                <fullName>Beryllium (Be)</fullName>
            </value>
            <value>
                <fullName>Biocatalysts</fullName>
            </value>
            <value>
                <fullName>Bismuth</fullName>
            </value>
            <value>
                <fullName>Bismuth (Bi)</fullName>
            </value>
            <value>
                <fullName>Bohrium (Bh)</fullName>
            </value>
            <value>
                <fullName>Boron</fullName>
            </value>
            <value>
                <fullName>Boron (B)</fullName>
            </value>
            <value>
                <fullName>Bromine</fullName>
            </value>
            <value>
                <fullName>Bromine (Br)</fullName>
            </value>
            <value>
                <fullName>Cadmium</fullName>
            </value>
            <value>
                <fullName>Cadmium (Cd)</fullName>
            </value>
            <value>
                <fullName>Calcium</fullName>
            </value>
            <value>
                <fullName>Calcium (Ca)</fullName>
            </value>
            <value>
                <fullName>Californium (Cf)</fullName>
            </value>
            <value>
                <fullName>Carbon</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>