ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/External_Id_Integration__c.field-meta.xml
<CustomField>
    <fullName>External_Id_Integration__c</fullName>
    <externalId>true</externalId>
    <label>External Id (Integration)</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>