ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Facets__c.field-meta.xml
<CustomField>
    <fullName>Facets__c</fullName>
    <label>Facets</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Catalyst</fullName>
            </value>
            <value>
                <fullName>Ligand</fullName>
            </value>
            <value>
                <fullName>Bubblers &amp; Oth Equip</fullName>
            </value>
            <value>
                <fullName>Donor Atom</fullName>
            </value>
            <value>
                <fullName>Heterogeneous</fullName>
            </value>
            <value>
                <fullName>Homogeneous</fullName>
            </value>
            <value>
                <fullName>PURATREM</fullName>
            </value>
            <value>
                <fullName>AChiral</fullName>
            </value>
            <value>
                <fullName>Chiral</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>