ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Featured_Priority__c.field-meta.xml
<CustomField>
    <fullName>Featured_Priority__c</fullName>
    <inlineHelpText>Lower the number, higher it would be on the featured product list</inlineHelpText>
    <label>Featured Priority</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>