ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Flash_point__c.field-meta.xml
<CustomField>
    <fullName>Flash_point__c</fullName>
    <label>Flash_point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>