ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/For_sale_in_USA_only__c.field-meta.xml
<CustomField>
    <fullName>For_sale_in_USA_only__c</fullName>
    <label>For sale in USA only</label>
    <length>255</length>
    <type>Text</type>
</CustomField>