ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Force_Update__c.field-meta.xml
<CustomField>
    <fullName>Force_Update__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Just to force automation</description>
    <label>Force Update</label>
    <type>Checkbox</type>
</CustomField>