ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Formula__c.field-meta.xml
<CustomField>
    <fullName>Formula__c</fullName>
    <label>Formula</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>