ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Formula_Site__c.field-meta.xml
<CustomField>
    <fullName>Formula_Site__c</fullName>
    <description>To display on Site</description>
    <label>Formula Site</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>