ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Formula_Text__c</fullName>
    <description>For searching on Site</description>
    <label>Formula Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>