ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Formula_weight__c.field-meta.xml
<CustomField>
    <fullName>Formula_weight__c</fullName>
    <label>Formula_weight</label>
    <length>255</length>
    <type>Text</type>
</CustomField>