ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Fullerene__c.field-meta.xml
<CustomField>
    <fullName>Fullerene__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Fullerene</label>
    <type>Checkbox</type>
</CustomField>