ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Harmonization_Code__c.field-meta.xml
<CustomField>
    <fullName>Harmonization_Code__c</fullName>
    <label>Harmonization Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>