ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Has_Structure_Updated__c.field-meta.xml
<CustomField>
    <fullName>Has_Structure_Updated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Structure Updated?</label>
    <type>Checkbox</type>
</CustomField>