ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Has_Tech_Notes__c.field-meta.xml
<CustomField>
    <fullName>Has_Tech_Notes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Tech Notes?</label>
    <type>Checkbox</type>
</CustomField>