ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/HAZ__c.field-meta.xml
<CustomField>
    <fullName>HAZ__c</fullName>
    <label>HAZ</label>
    <length>255</length>
    <type>Text</type>
</CustomField>