ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Heat_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Heat_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Heat_Sensitive</label>
    <type>Checkbox</type>
</CustomField>