ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Hetero_Metal_Catalysts__c.field-meta.xml
<CustomField>
    <fullName>Hetero_Metal_Catalysts__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hetero Metal Catalysts</label>
    <type>Checkbox</type>
</CustomField>