ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Hygroscopic__c.field-meta.xml
<CustomField>
    <fullName>Hygroscopic__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Hygroscopic</label>
    <type>Checkbox</type>
</CustomField>