ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/IATA_Class__c.field-meta.xml
<CustomField>
    <fullName>IATA_Class__c</fullName>
    <label>IATA-Class</label>
    <length>255</length>
    <type>Text</type>
</CustomField>