ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/IATA_Packing_group__c.field-meta.xml
<CustomField>
    <fullName>IATA_Packing_group__c</fullName>
    <label>IATA-Packing group</label>
    <length>255</length>
    <type>Text</type>
</CustomField>