ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/IATA_Secondary_hazard_1__c.field-meta.xml
<CustomField>
    <fullName>IATA_Secondary_hazard_1__c</fullName>
    <label>IATA-Secondary hazard 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>