ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/IATA_UN_Number__c.field-meta.xml
<CustomField>
    <fullName>IATA_UN_Number__c</fullName>
    <label>IATA-UN Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>