ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Index_Formula_Site__c.field-meta.xml
<CustomField>
    <fullName>Index_Formula_Site__c</fullName>
    <description>To display on the Site</description>
    <label>Index Formula Site</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>