ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Index_Formula_Text__c.field-meta.xml
<CustomField>
    <fullName>Index_Formula_Text__c</fullName>
    <label>Index Formula Text</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>