ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Intro_Date__c.field-meta.xml
<CustomField>
    <fullName>Intro_Date__c</fullName>
    <label>Intro Date</label>
    <type>Date</type>
</CustomField>