ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Ligand__c.field-meta.xml
<CustomField>
    <fullName>Ligand__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Ligand</label>
    <type>Checkbox</type>
</CustomField>