ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Light_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Light_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Light Sensitive</label>
    <type>Checkbox</type>
</CustomField>