ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Listed_in_TSCA__c.field-meta.xml
<CustomField>
    <fullName>Listed_in_TSCA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Listed in TSCA?</label>
    <type>Checkbox</type>
</CustomField>