ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/ListSeq__c.field-meta.xml
<CustomField>
    <fullName>ListSeq__c</fullName>
    <description>Value to use to sort variant products</description>
    <label>ListSeq</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>