ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Materials_for_Energy_Applications__c.field-meta.xml
<CustomField>
    <fullName>Materials_for_Energy_Applications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Materials for Energy Applications</label>
    <type>Checkbox</type>
</CustomField>