ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MCOS_Booklet__c.field-meta.xml
<CustomField>
    <fullName>MCOS_Booklet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MCOS Booklet</label>
    <type>Checkbox</type>
</CustomField>