ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MDL_Number__c.field-meta.xml
<CustomField>
    <fullName>MDL_Number__c</fullName>
    <label>MDL Number</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>