ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Melting_point__c.field-meta.xml
<CustomField>
    <fullName>Melting_point__c</fullName>
    <label>Melting_point</label>
    <length>255</length>
    <type>Text</type>
</CustomField>