ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/meta_description__c.field-meta.xml
<CustomField>
    <fullName>meta_description__c</fullName>
    <description>used in meta tags on commerce store</description>
    <label>meta_description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>