ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/meta_page_title__c.field-meta.xml
<CustomField>
    <fullName>meta_page_title__c</fullName>
    <description>used in meta tags on commerce store</description>
    <label>meta_page_title</label>
    <length>255</length>
    <type>Text</type>
</CustomField>