ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Metallocenes_Derivatives_Cp_Precursor__c.field-meta.xml
<CustomField>
    <fullName>Metallocenes_Derivatives_Cp_Precursor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Metallocenes, Derivatives &amp; Cp Precursor</label>
    <type>Checkbox</type>
</CustomField>