ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MfText__c.field-meta.xml
<CustomField>
    <fullName>MfText__c</fullName>
    <label>MfText</label>
    <length>255</length>
    <type>Text</type>
</CustomField>