ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Minimum_Qty__c.field-meta.xml
<CustomField>
    <fullName>Minimum_Qty__c</fullName>
    <label>Minimum Qty</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>