ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MOCVD_CVD_Precursor__c.field-meta.xml
<CustomField>
    <fullName>MOCVD_CVD_Precursor__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOCVD/CVD Precursor</label>
    <type>Checkbox</type>
</CustomField>