ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MOF__c.field-meta.xml
<CustomField>
    <fullName>MOF__c</fullName>
    <defaultValue>false</defaultValue>
    <label>MOF</label>
    <type>Checkbox</type>
</CustomField>