ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Moisture_Sensitive__c.field-meta.xml
<CustomField>
    <fullName>Moisture_Sensitive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Moisture Sensitive</label>
    <type>Checkbox</type>
</CustomField>