ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/MWtext__c.field-meta.xml
<CustomField>
    <fullName>MWtext__c</fullName>
    <label>MWtext</label>
    <length>255</length>
    <type>Text</type>
</CustomField>