ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/New_Product__c.field-meta.xml
<CustomField>
    <fullName>New_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <label>New Product</label>
    <type>Checkbox</type>
</CustomField>