ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/NO_UPS__c.field-meta.xml
<CustomField>
    <fullName>NO_UPS__c</fullName>
    <defaultValue>false</defaultValue>
    <label>NO_UPS</label>
    <type>Checkbox</type>
</CustomField>