ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/NormalizedSize__c.field-meta.xml
<CustomField>
    <fullName>NormalizedSize__c</fullName>
    <label>NormalizedSize</label>
    <precision>18</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>