ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Note__c.field-meta.xml
<CustomField>
    <fullName>Note__c</fullName>
    <label>Note</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>