ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Old_SKU__c.field-meta.xml
<CustomField>
    <fullName>Old_SKU__c</fullName>
    <description>Old SKU</description>
    <inlineHelpText>Old SKU</inlineHelpText>
    <label>Old SKU</label>
    <length>255</length>
    <type>Text</type>
</CustomField>