ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Other_Search_Terms__c.field-meta.xml
<CustomField>
    <fullName>Other_Search_Terms__c</fullName>
    <label>Other Search Terms</label>
    <type>TextArea</type>
</CustomField>