ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Others__c.field-meta.xml
<CustomField>
    <fullName>Others__c</fullName>
    <label>Other</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Chiral</fullName>
            </value>
            <value>
                <fullName>Achiral</fullName>
            </value>
            <value>
                <fullName>Homogeneous</fullName>
            </value>
            <value>
                <fullName>Heterogeneous</fullName>
            </value>
            <value>
                <fullName>PURATREM</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>