ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/P_Booklet__c.field-meta.xml
<CustomField>
    <fullName>P_Booklet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>P Booklet</label>
    <type>Checkbox</type>
</CustomField>