ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Packaged_in_Cylinder__c.field-meta.xml
<CustomField>
    <fullName>Packaged_in_Cylinder__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Packaged in Cylinder</label>
    <type>Checkbox</type>
</CustomField>