ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Parent_Sku__c.field-meta.xml
<CustomField>
    <fullName>Parent_Sku__c</fullName>
    <label>Parent Sku</label>
    <length>100</length>
    <type>Text</type>
</CustomField>