ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Pore_volume__c.field-meta.xml
<CustomField>
    <fullName>Pore_volume__c</fullName>
    <label>Pore_volume</label>
    <length>255</length>
    <type>Text</type>
</CustomField>