ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Pr_not_inc_cyl_dep__c.field-meta.xml
<CustomField>
    <fullName>Pr_not_inc_cyl_dep__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pr_not_inc_cyl_dep</label>
    <type>Checkbox</type>
</CustomField>