ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Price_inc_non_ret_cyl__c.field-meta.xml
<CustomField>
    <fullName>Price_inc_non_ret_cyl__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price_inc_non_ret_cyl</label>
    <type>Checkbox</type>
</CustomField>