ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Price_Include_Cylinder_Deposit__c.field-meta.xml
<CustomField>
    <fullName>Price_Include_Cylinder_Deposit__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Include Cylinder Deposit</label>
    <type>Checkbox</type>
</CustomField>