ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Price_per_qty_contained__c.field-meta.xml
<CustomField>
    <fullName>Price_per_qty_contained__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price_per_qty_contained</label>
    <type>Checkbox</type>
</CustomField>