ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Product_Item__c.field-meta.xml
<CustomField>
    <fullName>Product_Item__c</fullName>
    <label>Product Item</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>(-)DPC IN HEPTANES, 60-65 WT%</fullName>
            </value>
            <value>
                <fullName>(+)DPC in Hexanes, 60-65 wt%</fullName>
            </value>
            <value>
                <fullName>9-BBN, 0.5M IN THF</fullName>
            </value>
            <value>
                <fullName>AB Amine Complex Proprietary</fullName>
            </value>
            <value>
                <fullName>ACUBRIGHT SOLUTION</fullName>
            </value>
            <value>
                <fullName>Alane (AlH3)</fullName>
            </value>
            <value>
                <fullName>BOROL SOLUTION</fullName>
            </value>
            <value>
                <fullName>BTHF, 1M in THF, Developmental</fullName>
            </value>
            <value>
                <fullName>BTHF, 1 Molar in THF</fullName>
            </value>
            <value>
                <fullName>CALLERY MBA POWDER</fullName>
            </value>
            <value>
                <fullName>CALLERY SNB 919 SOLUTION</fullName>
            </value>
            <value>
                <fullName>CALLERY STB 130 SOLUTION</fullName>
            </value>
            <value>
                <fullName>CalSelect® Li, 1M in THF</fullName>
            </value>
            <value>
                <fullName>CALSELECT® LI, 1 MOLAR IN M4M</fullName>
            </value>
            <value>
                <fullName>CALSELECT® LT, 1 MOLAR IN THF</fullName>
            </value>
            <value>
                <fullName>CALSELECT® NA, 1 MOLAR IN THF</fullName>
            </value>
            <value>
                <fullName>CALSELECT® STAB</fullName>
            </value>
            <value>
                <fullName>CalSelect® STAB Developmental</fullName>
            </value>
            <value>
                <fullName>CAUSTIC SOLUTION</fullName>
            </value>
            <value>
                <fullName>CHROMACLEAR SOL</fullName>
            </value>
            <value>
                <fullName>COLORCLEAR SOL</fullName>
            </value>
            <value>
                <fullName>DEANB</fullName>
            </value>
            <value>
                <fullName>DMSB</fullName>
            </value>
            <value>
                <fullName>DMSB, 2M in THF</fullName>
            </value>
            <value>
                <fullName>HOUSE ALCOHOLATES</fullName>
            </value>
            <value>
                <fullName>HOUSE ALKALI METAL</fullName>
            </value>
            <value>
                <fullName>HOUSE BORANES</fullName>
            </value>
            <value>
                <fullName>KDMO, 50 WT% IN N-HEPTANE</fullName>
            </value>
            <value>
                <fullName>KE 24% in Ethanol(DN W 5% Tol)</fullName>
            </value>
            <value>
                <fullName>KEMBORINO* SOL</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>