ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Product_Kit_Grouping__c.field-meta.xml
<CustomField>
    <fullName>Product_Kit_Grouping__c</fullName>
    <description>Used to group Product Kits child products</description>
    <label>Product Kit Grouping</label>
    <length>255</length>
    <type>Text</type>
</CustomField>