ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Proper_Shipping_Name__c.field-meta.xml
<CustomField>
    <fullName>Proper_Shipping_Name__c</fullName>
    <label>Proper Shipping Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>