ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Puratrem__c.field-meta.xml
<CustomField>
    <fullName>Puratrem__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Puratrem</label>
    <type>Checkbox</type>
</CustomField>