ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Purity__c.field-meta.xml
<CustomField>
    <fullName>Purity__c</fullName>
    <label>Purity</label>
    <length>255</length>
    <type>Text</type>
</CustomField>