ASC Prod BAckup/ASC Prod/force-app/main/default/objects/Product2/fields/Pyrophoric__c.field-meta.xml
<CustomField>
    <fullName>Pyrophoric__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Pyrophoric</label>
    <type>Checkbox</type>
</CustomField>